--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,10 @@ theme = "hugo-theme-learn"
 home = [ "HTML", "RSS", "JSON" ]
 
 [params]
-themeVariant = "blue"
+  themeVariant = "blue"
+  showVisitedLinks = false
+  disableSearch = true
+  disableNextPrev = true
 
 [markup]
   [markup.goldmark]
