nouveau nom pour le site

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dcs.linkea.org/"
+baseURL = "https://www.eiders.fr/"
 languageCode = "fr-fr"
 title = "Les Eiders Implacables"
 titleSeparator = "-"
