Sélection d'une liste de vidéos faisant référence dans la communauté

--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ titleSeparator = "-"
 theme = "hugo-theme-learn"
 
 home = [ "HTML", "RSS", "JSON" ]
+enableEmoji = true
 
 [params]
   themeVariant = "blue"
